Fixed mobile button being invisible

--- a/src/StyleSheets/MenuToggle.css
+++ b/src/StyleSheets/MenuToggle.css
@@ -11,4 +11,5 @@ button {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    background-color: #C5C6C7;
 }
